--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,12 +40,12 @@ jobs:
           restore-keys: |
             texlive-${{ runner.os }}-
       
-      - name: Install LaTeX dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            latexmk \
-            python3-pygments
+      # - name: Install LaTeX dependencies
+      #   run: |
+      #     sudo apt-get update
+      #     sudo apt-get install -y \
+      #       latexmk \
+      #       python3-pygments
           
           # Verify installation
           latexmk -version
