--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -85,7 +85,34 @@ jobs:
           path: pdfs/**/*.pdf
           retention-days: 30
       
-      
+      - name: Debug working directory
+        run: |
+          echo "PWD = $(pwd)"
+          echo "HOME = $HOME"
+          echo "GITHUB_WORKSPACE = $GITHUB_WORKSPACE"
+          
+          echo "--- Listing PWD ---"
+          ls -a
+          
+          echo "--- Listing GITHUB_WORKSPACE ---"
+          ls -a "$GITHUB_WORKSPACE"
+          
+          # Check for .git folder
+          echo "--- Checking for .git directory ---"
+          if [ -d ".git" ]; then
+            echo "Found .git in PWD"
+          else
+            echo "No .git in PWD"
+          fi
+
+          if [ -d "$GITHUB_WORKSPACE/.git" ]; then
+            echo "Found .git in GITHUB_WORKSPACE"
+          else
+            echo "No .git in GITHUB_WORKSPACE"
+          fi
+
+
+
       - name: Commit updated PDFs back into the repository
         if: github.event_name == 'push' && success()
         run: |
